Fixes overlap issue with toc

--- a/_includes/components/toc.css
+++ b/_includes/components/toc.css
@@ -13,6 +13,7 @@
 		position: absolute;
 		left: 1rem;
 		width: 13rem;
+		z-index: 1;
 	}
 	.elv-toc details > summary {
 		margin-top: 0;
